# deep-dta-lightning

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  learning_rate_finder.yaml  learning_rate_monitor.yaml
configs/data/: davis.yaml  davis_scaled.yaml  davis_tabular.yaml  kiba.yaml  prediction.yaml
configs/logger/: many_loggers.yaml  wandb.yaml
configs/model/: deep_dta.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
data/davis/: affinity.npy  ligands.json  proteins.json
src/: eval.py  train.py
src/data/: affinity_datamodule.py  affinity_datamodules.py  affinity_datasets.py  encoders.py
src/data/components/: affinity_dataset.py  ligands.py  proteins.py
src/models/: collect_predictions.py  dta_module.py
src/models/components/: dense.py  dta.py  encoder.py  metrics.py
src/utils/: __init__.py  utils.py
tests/: conftest.py  test_datamodules.py  test_eval.py  test_train.py
tests/helpers/: run_sh_command.py
