[tool.poetry]
name = "deep-dta-lightning"
version = "0.0.1"
description = "DeepDTA rewrite in Pytorch Lightning"
readme = "README.md"
authors = ["Oleg Taratukhin <oleg.taratukhin@quantori.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"

# PyTorch Lightning - for training
lightning = "^2.0.0"
torchmetrics = "^0.11.4"
# this is a workaround for https://github.com/Lightning-AI/lightning/issues/17106
fastapi = ">=0.88"

# Hydra - for config management
hydra-colorlog = "^1.2.0"
pyrootutils = "^1.0.4"
typing-extensions = "^4.3.0"
hydra-core = "^1.3.0"

# MLflow - logging training and registering models
matplotlib = "^3.6.2"
plotly = "^5.11.0"

# Pandas - for working with dataframes
pandas = "^1.5.3"

# Optional dependencies
mlflow = { version = "^2.0.1", optional = true }
numba = { version = ">0.56", optional = true }

[tool.poetry.extras]
mlflow = ["mlflow", "numba"]

[tool.poetry.group.eda.dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
pytest = "^7.1.2"
mypy = "^1.3"
pylint = "^2.15.9"

[tool.poetry.scripts]
qflow = "qflow.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
